yaml/min-cluster-allinone/istio/istio-1.8.3/istio-demo-grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: grafana-istio-demo
  name: grafana-istio-demo
  namespace: istio-system
spec:
  rules:
  - host: grafana-istio-demo.inc-inc.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
