yaml/min-cluster-allinone/istio/istio-1.8.3/istio-demo-jaeger-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: jaeger-istio-demo
  name: jaeger-istio-demo
  namespace: istio-system
spec:
  rules:
  - host: jaeger-istio-demo.inc-inc.com
    http:
      paths:
      - backend:
          serviceName: tracing
          servicePort: 16686
        path: /
